--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&family=Fauna+One&display=swap');
 
 :root {
-  font-family: Quicksand, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Fauna One', system-ui, serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -35,6 +35,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'Cinzel', serif;
 }
 
 button {
